removed margin 0 from body to satisfy alignment, will look later how to have it and fix alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,7 +11,6 @@ body {
     background-image: url("../images/background.png");
     color: #777777;
     height: 100%;
-    margin: 0%;
 }
 
 header {
